--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "polymer test"
   },
   "dependencies": {
+    "@polymer/paper-button": "3.0.1",
+    "@polymer/iron-icons": "3.0.1",
+    "@polymer/iron-iconset-svg": "3.0.1",
     "@polymer/polymer": "3.4.1",
     "d3": "5.16.0"
   },
