--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@polymer/paper-button": "3.0.1",
+    "@polymer/paper-icon-button": "3.0.2",
     "@polymer/iron-icons": "3.0.1",
     "@polymer/iron-iconset-svg": "3.0.1",
     "@polymer/polymer": "3.4.1",
